--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "noel-website-temporary",
-  "version": "1.8.1",
+  "version": "1.8.2",
   "description": "Tymczasowa strona (Error 423: Locked).",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Sefinek#5905",
+  "author": "Sefinek <contact@sefinek.fun>",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "helmet": "^5.0.2"
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "helmet": "^5.1.0"
   }
 }
