--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Sefinek <contact@sefinek.fun>",
+  "author": "Sefinek <contact@sefinek.net> (https://sefinek.net)",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.9",
